--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,34 @@
+# Android studio ignore
+android/.gradle
+android/.idea/libraries
+build/
+
+
+# Wildfly ignore
+wildfly/standalone/log
+wildfly/standalone/tmp
+
+# Resteasy ignore
+resteasy/.idea/dataSources.ids
+resteasy/.idea/dataSources.local.xml
+resteasy/.idea/dataSources.xml
+resteasy/.idea/libraries
+target/
+
+*.class
+
+# Mobile Tools for Java (J2ME)
+.mtj.tmp/
+
+# Package Files #
+*.jar
+*.war
+*.ear
+
+# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
+hs_err_pid*
+
+
 # Built application files
 *.apk
 *.ap_
